7. Fix the cyber security section header disapearing on main page collapse

--- a/WebApplication2/Content/bootstrap.css
+++ b/WebApplication2/Content/bootstrap.css
@@ -65,11 +65,9 @@ body {
 
 #main-window.collapse .category-container {
     height: 7vh !important;
-    visibility:hidden;
 }
 #main-window.collapsing .category-container {
     height: 7vh !important;
-    visibility: hidden;
 }
 
 #main-window.in .project-category {
@@ -90,11 +88,9 @@ body {
 }
 
 .category-container.collapse .vid {
-    visibility:hidden;
 }
 
 .category-container.collapsing .vid {
-    visibility: hidden;
 }
 
 .category-container.in .category-content{
